# sandbox

./: .gitignore  BuildServer.bat  CMakeLists.txt  Makefile.am  README.mkd  build.bat  build_server.bat  build_server.sh  configure.ac  index.html  msvc_build.cmd  sandbox.sln  sandbox_vc9.sln
data/: openswg.conf.dist  sandbox.cfg.dist
data/packets/: OkPacket.txt  SendAcknowledge.txt
data/packets/Actions/: KerenStarshipLand.txt  KerenStarshipTakeoff.txt
data/packets/Login/: ServerCharacterList.txt  ServerIpList.txt  ServerList.txt  StationIdentifier.txt
data/packets/Objects/: KerenStarship.txt  KerenStarshipTicketCollector.txt
data/packets/SOE/: ConnectionServer.txt  LoginServer.txt  NetStatus.txt  PingResponse.txt  SessionResponse.txt
data/packets/Spatial/: PlayerChatFooter.txt  PlayerChatHeader.txt  PlayerEmote.txt  PositionUpdate.txt  PostureUpdate_Kneel.txt  PostureUpdate_Prone.txt  PostureUpdate_Sit.txt  PostureUpdate_Stand.txt  PostureUpdate_Taunt.txt  SelfPostureUpdate_Kneel.txt  SelfPostureUpdate_Prone.txt  SelfPostureUpdate_Sit.txt  SelfPostureUpdate_Stand.txt  SelfPostureUpdate_Taunt.txt
data/packets/Zone/: CharacterOptions.txt  ChatServerStatus.txt  Creo3.txt  Creo4pt4.txt  CreoCreate.txt  Inventory.txt  ParametersMessage.txt  Play8.txt  Play9.txt  PlayClose.txt  PlayLink.txt  PrecloseClose.txt  SceneCreateObjectByCrc.txt  UpdatePvpStatusMessage.txt
data/packets/ZoneInsertion/: Creo1.txt  Creo3.txt  Creo4.txt  Creo4pt2.txt  Creo4pt3.txt  Creo4pt4.txt  Creo6.txt  Creo8.txt  CreoCreate.txt  Int900Pkt.txt  Inventory.txt  LoadDone.txt  LoadTerrain.txt  Play8.txt  Play9.txt  Play9Update.txt  PlayClose.txt  PlayCreate.txt  PlayLink.txt  PrecloseClose.txt  PreloadCharacter.txt  UnkByteFlag.txt
include/: ByteBuffer.h  GalaxyServer.h  GalaxySession.h  Logger.h  LoginHandler.h  LoginRunnable.h  LoginServer.h  NetworkAddress.h  OpcodeFactory.h  PacketTools.h  Player.h  ProgramOptions.h  Protocol.h  SOEHandler.h  Session.h  SocketServer.h  SoeMessageFactory.h  SpatialHandler.h  UdpSocketListener.h  Vector3.h  ZoneInsertionHandler.h  ZoneRunnable.h  ZoneServer.h
msvc/: msvc_build.cmd
msvc/vc9/: sandbox.sln
msvc/vc9/login_server/: login_server.vcproj
msvc/vc9/sandbox/: sandbox.vcproj
msvc/vc9/shared/: shared.vcproj
msvc/vc9/tests/: tests.vcproj
msvc/vc9/zone_server/: zone_server.vcproj
src/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  main.cpp
src/login/: CMakeLists.txt  LoginRunnable.cpp  LoginServer.cpp  LoginServer.h  login.vcxproj  login.vcxproj.filters  login_server.cc  login_server.h  login_vc9.vcproj
src/sandbox/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  main.cc  main.cpp  program_options.cc  program_options.h  sandbox.vcxproj  sandbox.vcxproj.filters  sandbox_vc9.vcproj
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  GalaxyServer.cpp  GalaxyServer.h  GalaxySession.cpp  Logger.cpp  Logger.h  LoginHandler.cpp  LoginHandler.h  NetworkAddress.h  OpcodeFactory.cpp  PacketTools.cpp  PacketTools.h  Player.cpp  Player.h  Protocol.cpp  Protocol.h  SOEHandler.cpp  Session.cpp  Session.h  SocketServer.cpp  SoeMessageFactory.cpp  SoeMessageFactory.h  SpatialHandler.cpp  UdpSocketListener.cpp  UdpSocketListener.h  Vector3.h  ZoneInsertionHandler.cpp  byte_buffer-inl.h  byte_buffer.cc  byte_buffer.h  byte_buffer_unittest.cc  galaxy_server.cc  galaxy_server.h  load_packet_from_text_file_unittest.cc  logger.cc  login_handler.cc  login_handler.h  network_address.h  (+14 more)
src/shared/msvc/: stdint.h
src/zone/: CMakeLists.txt  SpatialHandler.cpp  SpatialHandler.h  ZoneInsertionHandler.cpp  ZoneInsertionHandler.h  ZoneRunnable.cpp  ZoneServer.cpp  ZoneServer.h  spatial_handler.cc  spatial_handler.h  zone.vcxproj  zone.vcxproj.filters  zone_insertion_handler.cc  zone_insertion_handler.h  zone_server.cc  zone_server.h  zone_vc9.vcproj
test/: TestByteBuffer.cpp  TestLoadPacketFromTextFile.cpp  byte_buffer_tests.cc  main.cc  main.cpp  test.vcxproj  test.vcxproj.filters  tests_vc9.vcproj
tools/: styleguide_check.bat
tools/cmake/: AnhExecutable.cmake  AnhLibrary.cmake  External_Boost.cmake
tools/m4/: gtest.m4
